# Korsair

./: CMakeLists.txt  README  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferencewindow.cpp  preferencewindow.h  preferencewindow.ui  rc.qrc
